# folderJunker

./: .gitignore  CMakeLists.txt  README.md  folderJunker.cpp
.github/workflows/: cmake.yml
docs/: README.md
libfj/include/: availableCommands.hpp  fjhome.hpp  help.hpp  test.hpp  version.hpp
libfj/src/: CMakeLists.txt  fjhome.cpp  help.cpp  test.cpp
